show time of sending and the last message in the dialogs